--- a/pom.xml
+++ b/pom.xml
@@ -11,20 +11,22 @@
     <name>${project.groupId}.${project.artifactId}</name>
 
     <modules>
-        <module>quarkus-2.16</module>
-        <module>quarkus-3.0</module>
-        <module>quarkus-3.2</module> <!-- 3.2 has LTS (https://quarkus.io/blog/lts-releases/) and is latest Red Hat build: https://access.redhat.com/articles/4966181 -->
-        <module>quarkus-3.4</module>
-        <module>quarkus-3.5</module>
-        <module>quarkus-3.6</module>
-        <module>quarkus-3.7</module>
         <module>quarkus-3.8</module> <!-- 3.8 has LTS (https://quarkus.io/blog/quarkus-3-8-released/) -->
         <module>quarkus-3.9</module>
+        <module>quarkus-3.10</module>
+        <module>quarkus-3.11</module>
+        <module>quarkus-3.12</module>
+        <module>quarkus-3.13</module>
+        <module>quarkus-3.14</module>
+        <module>quarkus-3.15</module> <!-- 3.15 has LTS (https://quarkus.io/blog/quarkus-3-15-1-released/) -->
+        <module>quarkus-3.16</module>
         <module>wildfly-26.1</module>
         <module>wildfly-28</module>
-        <module>wildfly-29</module>
         <module>wildfly-30</module>
         <module>wildfly-31</module>
+        <module>wildfly-32</module>
+        <module>wildfly-33</module>
+        <module>wildfly-34</module>
         <module>update-checker</module>
     </modules>
 
@@ -71,60 +73,67 @@
         <!-- prevent javadoc failures in JDK 8 -->
         <additionalparam>-Xdoclint:none</additionalparam>
 
-        <!-- it's jacoco-maven-plugin:0.8.2 that requires 3.3.9 -->
-        <minimum-maven-version>3.3.9</minimum-maven-version>
+        <!-- it's maven-dependency-plugin:3.7.0 that requires 3.6.3 -->
+        <minimum-maven-version>3.6.3</minimum-maven-version>
 
         <!-- use 'versions:display-dependency-updates versions:display-plugin-updates' -->
         <!-- in update-checker to find newer versions of artifacts and plugins -->
         <!-- for plugins see also the section in README.md -->
 
         <!-- non-apache maven plugin versions -->
-        <asciidoctor.plugin.version>3.0.0</asciidoctor.plugin.version>
-        <build-helper.plugin.version>3.5.0</build-helper.plugin.version>
-        <docker.plugin.version>0.44.0</docker.plugin.version>
-        <extra-enforcer-rules.plugin.version>1.8.0</extra-enforcer-rules.plugin.version>
+        <asciidoctor.plugin.version>3.1.0</asciidoctor.plugin.version>
+        <build-helper.plugin.version>3.6.0</build-helper.plugin.version>
+        <docker.plugin.version>0.45.1</docker.plugin.version>
+        <extra-enforcer-rules.plugin.version>1.9.0</extra-enforcer-rules.plugin.version>
         <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
+        <!-- the jandex version is overwritten in the quarkus modules -->
+        <jandex.plugin.version>3.2.3</jandex.plugin.version>
         <nexus-staging.plugin.version>1.6.13</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>7.4.0</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.54</swagger-codegen.plugin.version>
-        <versions.plugin.version>2.16.2</versions.plugin.version>
-        <wildfly.plugin.version>4.2.2.Final</wildfly.plugin.version>
+        <openapi-generator.plugin.version>7.9.0</openapi-generator.plugin.version>
+        <!-- Don't use 3.0.57..3.0.64 because of https://github.com/swagger-api/swagger-codegen-generators/issues/1295 -->
+        <!-- (still not fixed for non-spring apps, see https://github.com/swagger-api/swagger-codegen-generators/pull/1308) -->
+        <swagger-codegen.plugin.version>3.0.56</swagger-codegen.plugin.version>
+        <versions.plugin.version>2.17.1</versions.plugin.version>
+        <wildfly.plugin.version>5.0.1.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
         <maven.assembly.plugin.version>3.7.1</maven.assembly.plugin.version>
-        <maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
+        <maven.clean.plugin.version>3.4.0</maven.clean.plugin.version>
         <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
-        <maven.dependency.plugin.version>3.6.1</maven.dependency.plugin.version>
-        <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
+        <maven.dependency.plugin.version>3.8.1</maven.dependency.plugin.version>
+        <maven.deploy.plugin.version>3.1.3</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.3.0</maven.ear.plugin.version>
         <maven.ejb.plugin.version>3.2.1</maven.ejb.plugin.version>
-        <maven.enforcer.plugin.version>3.4.1</maven.enforcer.plugin.version>
-        <maven.failsafe.plugin.version>3.2.5</maven.failsafe.plugin.version>
-        <maven.install.plugin.version>3.1.1</maven.install.plugin.version>
-        <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
+        <maven.enforcer.plugin.version>3.5.0</maven.enforcer.plugin.version>
+        <maven.failsafe.plugin.version>3.5.2</maven.failsafe.plugin.version>
+        <maven.install.plugin.version>3.1.3</maven.install.plugin.version>
+        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
+        <maven.javadoc.plugin.version>3.11.1</maven.javadoc.plugin.version>
         <maven.rar.plugin.version>3.0.0</maven.rar.plugin.version>
-        <maven.release.plugin.version>3.0.1</maven.release.plugin.version>
+        <maven.release.plugin.version>3.1.1</maven.release.plugin.version>
         <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
-        <maven.scm.plugin.version>2.0.1</maven.scm.plugin.version>
-        <maven.shade.plugin.version>3.5.2</maven.shade.plugin.version>
-        <maven.site.plugin.version>3.12.1</maven.site.plugin.version>
+        <maven.scm.plugin.version>2.1.0</maven.scm.plugin.version>
+        <maven.shade.plugin.version>3.6.0</maven.shade.plugin.version>
+        <maven.site.plugin.version>3.21.0</maven.site.plugin.version>
         <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
         <maven.surefire.plugin.version>${maven.failsafe.plugin.version}</maven.surefire.plugin.version>
         <maven.war.plugin.version>3.4.0</maven.war.plugin.version>
 
         <!-- artifact versions -->
+        <!-- I observed slowness on CI/CD builds with versions 3.15.0+ -->
+        <!-- related to https://issues.apache.org/jira/projects/LANG/issues/LANG-1748 -->
         <apache.commons.lang3.version>3.14.0</apache.commons.lang3.version>
-        <logback.version>1.5.3</logback.version>
-        <lombok.version>1.18.32</lombok.version>
+        <logback.version>1.5.12</logback.version>
+        <lombok.version>1.18.34</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <slf4j.version>2.0.12</slf4j.version>
+        <io.opentelemetry.instrumentation.version>2.9.0</io.opentelemetry.instrumentation.version>
+        <slf4j.version>2.0.16</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.17.0</jackson-2-version>
-        <jackson-bom.version>2.17.0</jackson-bom.version>
+        <jackson-2-version>2.18.1</jackson-2-version>
+        <jackson-bom.version>2.18.1</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -139,21 +148,24 @@
         <!-- byte code manipulation tools, mostly used for tests, but not exclusively -->
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
-        <asm.version>9.6</asm.version>
-        <byte-buddy.version>1.14.13</byte-buddy.version>
+        <asm.version>9.7.1</asm.version>
+        <byte-buddy.version>1.15.10</byte-buddy.version>
+
+        <!-- use the latest Bouncy Castle version despite what Quarkus defines in its BOM -->
+        <bouncycastle.version>1.79</bouncycastle.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.3.0</opentest4j.version>
-        <junit.platform.version>1.10.2</junit.platform.version>
-        <junit.jupiter.version>5.10.2</junit.jupiter.version>
-        <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>5.11.0</mockito.version>
-        <equalsverifier.version>3.16.1</equalsverifier.version>
-        <json.unit.version>3.2.7</json.unit.version>
-        <jsonassert.version>1.5.1</jsonassert.version>
-        <restassured.version>5.4.0</restassured.version>
+        <junit.platform.version>1.11.3</junit.platform.version>
+        <junit.jupiter.version>5.11.3</junit.jupiter.version>
+        <hamcrest.version>3.0</hamcrest.version>
+        <mockito.version>5.14.2</mockito.version>
+        <equalsverifier.version>3.17.3</equalsverifier.version>
+        <json.unit.version>3.5.0</json.unit.version>
+        <jsonassert.version>1.5.3</jsonassert.version>
+        <restassured.version>5.5.0</restassured.version>
         <wiremock2.version>2.27.2</wiremock2.version>
-        <wiremock.version>3.5.2</wiremock.version>
+        <wiremock.version>3.9.2</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
         <!-- Simulating this variable depending on the OS (see also the profiles below overriding it) -->
@@ -325,6 +337,18 @@
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-analysis</artifactId>
                 <version>${asm.version}</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk18on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-annotations</artifactId>
+                <version>${io.opentelemetry.instrumentation.version}</version>
             </dependency>
 
             <!-- testing -->
@@ -631,14 +655,14 @@
                     <version>${extra-enforcer-rules.plugin.version}</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.sonatype.plugins</groupId>
-                    <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>${nexus-staging.plugin.version}</version>
-                </plugin>
-                <plugin>
                     <groupId>org.openapitools</groupId>
                     <artifactId>openapi-generator-maven-plugin</artifactId>
                     <version>${openapi-generator.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>${nexus-staging.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>io.swagger.codegen.v3</groupId>
