--- a/quarkus-3.10/pom.xml
+++ b/quarkus-3.10/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ch.schlau.wurzeln.root</groupId>
@@ -7,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-3.6</artifactId>
+    <artifactId>quarkus-3.10</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -17,15 +18,15 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>3.6.9</quarkus.version>
+        <quarkus.version>3.10.2</quarkus.version>
 
         <!-- Quarkus >= 3.2 requires Java 17, at least for its maven plugin -->
         <java.release>17</java.release>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
-        <jakarta.activation.version>2.1.2</jakarta.activation.version>
-        <jakarta.xml.bind-api.version>4.0.1</jakarta.xml.bind-api.version>
+        <jakarta.activation.version>2.1.3</jakarta.activation.version>
+        <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
         <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
         <jakarta.transaction.version>2.0.1</jakarta.transaction.version>
 
@@ -46,26 +47,31 @@
         <!-- mp.reactive-messaging classes included in smallrye.reactive-messaging, no dependency on upstream API -->
         <mp.reactive-streams-operators.version>3.0</mp.reactive-streams-operators.version>
         <mp.rest-client.version>3.0.1</mp.rest-client.version>
-        <smallrye.common.version>2.1.2</smallrye.common.version>
-        <smallrye.config.version>3.4.4</smallrye.config.version>
+        <smallrye.common.version>2.3.0</smallrye.common.version>
+        <smallrye.config.version>3.7.1</smallrye.config.version>
         <smallrye.context-propagation.version>2.1.0</smallrye.context-propagation.version>
-        <smallrye.fault-tolerance.version>6.2.6</smallrye.fault-tolerance.version>
-        <smallrye.graphql.version>2.6.1</smallrye.graphql.version>
-        <smallrye.health.version>4.0.4</smallrye.health.version>
-        <smallrye.jwt.version>4.4.0</smallrye.jwt.version>
+        <smallrye.fault-tolerance.version>6.3.0</smallrye.fault-tolerance.version>
+        <smallrye.graphql.version>2.8.4</smallrye.graphql.version>
+        <smallrye.health.version>4.1.0</smallrye.health.version>
+        <smallrye.jandex.version>3.1.7</smallrye.jandex.version>
+        <smallrye.jwt.version>4.5.2</smallrye.jwt.version>
         <smallrye.metrics.version>4.0.0</smallrye.metrics.version>
-        <smallrye.openapi.version>3.7.0</smallrye.openapi.version>
-        <smallrye.reactive-attribute-processor.version>4.10.2</smallrye.reactive-attribute-processor.version>
+        <smallrye.openapi.version>3.10.0</smallrye.openapi.version>
+        <smallrye.reactive-attribute-processor.version>4.21.0</smallrye.reactive-attribute-processor.version>
         <smallrye.reactive-converter-api.version>3.0.1</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>4.10.2</smallrye.reactive-messaging.version>
+        <smallrye.reactive-messaging.version>4.21.0</smallrye.reactive-messaging.version>
         <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
-        <smallrye.mutiny.reactive-streams-operators.version>2.5.1</smallrye.mutiny.reactive-streams-operators.version>
-        <smallrye.mutiny.vertx.version>3.7.2</smallrye.mutiny.vertx.version>
+        <smallrye.mutiny.reactive-streams-operators.version>2.6.0</smallrye.mutiny.reactive-streams-operators.version>
+        <smallrye.mutiny.vertx.version>3.12.0</smallrye.mutiny.vertx.version>
         <!-- quarkus is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
+        <!-- smallrye maven plugins -->
+        <jandex.plugin.version>${smallrye.jandex.version}</jandex.plugin.version>
+
         <!-- observability implementations -->
-        <io.micrometer.version>1.11.5</io.micrometer.version>
-        <io.opentelemetry.version>1.30.1</io.opentelemetry.version>
+        <io.micrometer.version>1.12.5</io.micrometer.version>
+        <io.opentelemetry.version>1.32.0</io.opentelemetry.version>
+        <io.opentelemetry.instrumentation.version>1.32.0</io.opentelemetry.instrumentation.version>
         <io.opentracing.version>0.33.0</io.opentracing.version>
 
         <!-- Artifact versions provided by Quarkus x.y -->
@@ -73,15 +79,15 @@
         <apache.httpclient.version>4.5.14</apache.httpclient.version>
         <jakarta.json.version>2.1.3</jakarta.json.version>
         <jakarta.json.bind.version>3.0.0</jakarta.json.bind.version>
-        <parsson.version>1.1.5</parsson.version>
+        <parsson.version>1.1.6</parsson.version>
         <yasson.version>3.0.3</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.15.3</jackson-2-version>
-        <jackson-bom.version>2.15.3</jackson-bom.version>
+        <jackson-2-version>2.17.0</jackson-2-version>
+        <jackson-bom.version>2.17.0</jackson-bom.version>
 
-        <infinispan.version>14.0.21.Final</infinispan.version>
-        <hibernate.version>6.2.19.Final</hibernate.version>
+        <infinispan.version>15.0.3.Final</infinispan.version>
+        <hibernate.version>6.4.7.Final</hibernate.version>
 
         <!-- Hibernate 7.0.0.Alpha5 is a compatible implementation for Bean Validation 3.0 (EE9/EE10) -->
         <jakarta.validation.version>3.0.2</jakarta.validation.version>
@@ -89,7 +95,7 @@
         <!-- ojdbc version in the quarkus-jdbc-oracle extension -->
         <oracle.ojdbc.version>23.3.0.23.09</oracle.ojdbc.version>
         <!-- kafka version in the kafka extensions -->
-        <kafka.version>3.6.1</kafka.version>
+        <kafka.version>3.7.0</kafka.version>
 
         <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 4.0) -->
         <jakarta.inject.version>2.0.1</jakarta.inject.version>
@@ -97,16 +103,23 @@
         <!-- Logging API supported by Quarkus (logback for testing must be compatible with slf4j) -->
         <slf4j.version>2.0.6</slf4j.version>
 
-        <asm.version>9.6</asm.version>
-        <byte-buddy.version>1.14.7</byte-buddy.version>
+        <asm.version>9.7</asm.version>
+        <byte-buddy.version>1.14.11</byte-buddy.version>
 
         <!-- it seems that the quarkus testing integration works best using the junit mentioned in the quarkus BOM -->
-        <junit.jupiter.version>5.10.1</junit.jupiter.version>
-        <junit.platform.version>1.10.1</junit.platform.version>
+        <junit.jupiter.version>5.10.2</junit.jupiter.version>
+        <junit.platform.version>1.10.2</junit.platform.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!-- Must include Bouncy Castle before the Quarkus BOM to make sure the latest version is not overridden -->
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk18on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+
             <!-- Quarkus BOM -->
             <dependency>
                 <groupId>io.quarkus</groupId>
@@ -130,6 +143,25 @@
                         <goals>
                             <goal>build</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-java</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireJavaVersion>
+                                    <version>${java.release}</version>
+                                </requireJavaVersion>
+                            </rules>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -274,6 +306,11 @@
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
+                    <artifactId>jandex</artifactId>
+                    <version>${smallrye.jandex.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-jwt</artifactId>
                     <version>${smallrye.jwt.version}</version>
                     <exclusions>
@@ -368,6 +405,11 @@
                     <groupId>io.opentelemetry</groupId>
                     <artifactId>opentelemetry-api</artifactId>
                     <version>${io.opentelemetry.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.opentelemetry.instrumentation</groupId>
+                    <artifactId>opentelemetry-instrumentation-annotations</artifactId>
+                    <version>${io.opentelemetry.instrumentation.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>io.opentracing</groupId>
