--- a/quarkus-3.8/pom.xml
+++ b/quarkus-3.8/pom.xml
@@ -17,7 +17,7 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>3.8.3</quarkus.version>
+        <quarkus.version>3.8.6</quarkus.version>
 
         <!-- Quarkus >= 3.2 requires Java 17, at least for its maven plugin -->
         <java.release>17</java.release>
@@ -33,7 +33,7 @@
 
         <!-- MicroProfile Standard Versions, from the quarkus-bom-x.x.x.Final.pom -->
         <!-- or as transitive dependency from the smallrye artifacts -->
-        <mp.config.version>3.0.3</mp.config.version>
+        <mp.config.version>3.1</mp.config.version>
         <mp.context-propagation.version>1.3</mp.context-propagation.version>
         <mp.fault-tolerance.version>4.0.2</mp.fault-tolerance.version>
         <mp.graphql.version>2.0</mp.graphql.version> <!-- transitive from smallrye.graphql.version -->
@@ -46,26 +46,31 @@
         <!-- mp.reactive-messaging classes included in smallrye.reactive-messaging, no dependency on upstream API -->
         <mp.reactive-streams-operators.version>3.0</mp.reactive-streams-operators.version>
         <mp.rest-client.version>3.0.1</mp.rest-client.version>
-        <smallrye.common.version>2.1.2</smallrye.common.version>
+        <smallrye.common.version>2.2.0</smallrye.common.version>
         <smallrye.config.version>3.5.4</smallrye.config.version>
-        <smallrye.context-propagation.version>2.1.0</smallrye.context-propagation.version>
+        <smallrye.context-propagation.version>2.1.2</smallrye.context-propagation.version>
         <smallrye.fault-tolerance.version>6.2.6</smallrye.fault-tolerance.version>
         <smallrye.graphql.version>2.7.0</smallrye.graphql.version>
         <smallrye.health.version>4.1.0</smallrye.health.version>
+        <smallrye.jandex.version>3.1.6</smallrye.jandex.version>
         <smallrye.jwt.version>4.4.0</smallrye.jwt.version>
         <smallrye.metrics.version>4.0.0</smallrye.metrics.version>
         <smallrye.openapi.version>3.10.0</smallrye.openapi.version>
-        <smallrye.reactive-attribute-processor.version>4.18.0</smallrye.reactive-attribute-processor.version>
+        <smallrye.reactive-attribute-processor.version>4.18.1</smallrye.reactive-attribute-processor.version>
         <smallrye.reactive-converter-api.version>3.0.1</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>4.18.0</smallrye.reactive-messaging.version>
+        <smallrye.reactive-messaging.version>4.18.1</smallrye.reactive-messaging.version>
         <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
         <smallrye.mutiny.reactive-streams-operators.version>2.5.8</smallrye.mutiny.reactive-streams-operators.version>
-        <smallrye.mutiny.vertx.version>3.10.0</smallrye.mutiny.vertx.version>
+        <smallrye.mutiny.vertx.version>3.11.0</smallrye.mutiny.vertx.version>
         <!-- quarkus is using resteasy-client-microprofile instead of smallrye-rest-client -->
+
+        <!-- smallrye maven plugins -->
+        <jandex.plugin.version>${smallrye.jandex.version}</jandex.plugin.version>
 
         <!-- observability implementations -->
         <io.micrometer.version>1.12.2</io.micrometer.version>
         <io.opentelemetry.version>1.32.0</io.opentelemetry.version>
+        <io.opentelemetry.instrumentation.version>1.32.0</io.opentelemetry.instrumentation.version>
         <io.opentracing.version>0.33.0</io.opentracing.version>
 
         <!-- Artifact versions provided by Quarkus x.y -->
@@ -77,11 +82,11 @@
         <yasson.version>3.0.3</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.16.1</jackson-2-version>
-        <jackson-bom.version>2.16.1</jackson-bom.version>
+        <jackson-2-version>2.17.2</jackson-2-version>
+        <jackson-bom.version>2.17.2</jackson-bom.version>
 
-        <infinispan.version>14.0.25.Final</infinispan.version>
-        <hibernate.version>6.4.4.Final</hibernate.version>
+        <infinispan.version>14.0.27.Final</infinispan.version>
+        <hibernate.version>6.4.8.Final</hibernate.version>
 
         <!-- Hibernate 7.0.0.Alpha5 is a compatible implementation for Bean Validation 3.0 (EE9/EE10) -->
         <jakarta.validation.version>3.0.2</jakarta.validation.version>
@@ -89,7 +94,7 @@
         <!-- ojdbc version in the quarkus-jdbc-oracle extension -->
         <oracle.ojdbc.version>23.3.0.23.09</oracle.ojdbc.version>
         <!-- kafka version in the kafka extensions -->
-        <kafka.version>3.6.1</kafka.version>
+        <kafka.version>3.7.0</kafka.version>
 
         <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 4.0) -->
         <jakarta.inject.version>2.0.1</jakarta.inject.version>
@@ -107,6 +112,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Must include Bouncy Castle before the Quarkus BOM to make sure the latest version is not overridden -->
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk18on</artifactId>
+                <version>${bouncycastle.version}</version>
+            </dependency>
+
             <!-- Quarkus BOM -->
             <dependency>
                 <groupId>io.quarkus</groupId>
@@ -293,6 +305,11 @@
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
+                    <artifactId>jandex</artifactId>
+                    <version>${smallrye.jandex.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-jwt</artifactId>
                     <version>${smallrye.jwt.version}</version>
                     <exclusions>
@@ -387,6 +404,11 @@
                     <groupId>io.opentelemetry</groupId>
                     <artifactId>opentelemetry-api</artifactId>
                     <version>${io.opentelemetry.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>io.opentelemetry.instrumentation</groupId>
+                    <artifactId>opentelemetry-instrumentation-annotations</artifactId>
+                    <version>${io.opentelemetry.instrumentation.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>io.opentracing</groupId>
