--- a/wildfly-32/pom.xml
+++ b/wildfly-32/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>wildfly-31</artifactId>
+    <artifactId>wildfly-32</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -16,13 +16,13 @@
         <!-- latest EE10 spec -->
         <jakarta.jakartaee-api.version>10.0.0</jakarta.jakartaee-api.version>
 
-        <!-- latest Wildfly 31 dependencies -->
+        <!-- latest Wildfly 32 dependencies -->
         <!-- see https://github.com/wildfly/boms/releases -->
-        <wildfly.bom.version>31.0.1.Final</wildfly.bom.version>
+        <wildfly.bom.version>32.0.1.Final</wildfly.bom.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
-        <jakarta.activation.version>2.1.2</jakarta.activation.version>
-        <jakarta.xml.bind-api.version>4.0.1</jakarta.xml.bind-api.version>
+        <jakarta.activation.version>2.1.3</jakarta.activation.version>
+        <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
         <jakarta.xml.soap-api.version>3.0.0</jakarta.xml.soap-api.version>
         <jakarta.xml.ws-api.version>4.0.0</jakarta.xml.ws-api.version>
         <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
@@ -34,8 +34,8 @@
         <version.org.jboss.spec.jakarta.el>4.0.1.Final</version.org.jboss.spec.jakarta.el>
         <jakarta.el.version>5.0.0-M1</jakarta.el.version>
 
-        <!-- MicroProfile Standard Versions provided by Wildfly 31 -->
-        <!-- see also https://mvnrepository.com/artifact/org.wildfly.bom/wildfly-microprofile/31.x.x.Final -->
+        <!-- MicroProfile Standard Versions provided by Wildfly 32 -->
+        <!-- see also https://mvnrepository.com/artifact/org.wildfly.bom/wildfly-microprofile/32.x.x.Final -->
         <mp.config.version>3.1</mp.config.version>
         <mp.fault-tolerance.version>4.0.2</mp.fault-tolerance.version>
         <mp.health.version>4.0.1</mp.health.version>
@@ -47,53 +47,53 @@
         <mp.reactive-messaging.version>3.0</mp.reactive-messaging.version>
         <mp.reactive-streams-operators.version>3.0</mp.reactive-streams-operators.version>
         <mp.rest-client.version>3.0.1</mp.rest-client.version>
-        <smallrye.common.version>2.2.0</smallrye.common.version>
-        <smallrye.config.version>3.4.4</smallrye.config.version>
+        <smallrye.common.version>2.3.0</smallrye.common.version>
+        <smallrye.config.version>3.7.1</smallrye.config.version>
         <smallrye.fault-tolerance.version>6.2.6</smallrye.fault-tolerance.version>
         <smallrye.health.version>4.0.4</smallrye.health.version>
         <smallrye.jwt.version>4.3.1</smallrye.jwt.version>
-        <smallrye.openapi.version>3.7.0</smallrye.openapi.version>
+        <smallrye.openapi.version>3.10.0</smallrye.openapi.version>
         <smallrye.opentelemetry.version>2.6.0</smallrye.opentelemetry.version>
         <smallrye.reactive-converter-api.version>2.6.0</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>4.11.0</smallrye.reactive-messaging.version>
-        <smallrye.mutiny.reactive-streams-operators.version>2.5.1</smallrye.mutiny.reactive-streams-operators.version>
+        <smallrye.reactive-messaging.version>4.19.0</smallrye.reactive-messaging.version>
+        <smallrye.mutiny.reactive-streams-operators.version>2.5.7</smallrye.mutiny.reactive-streams-operators.version>
         <smallrye.mutiny.vertx.version>3.6.0</smallrye.mutiny.vertx.version>
-        <!-- Wildfly 31 is using resteasy-client-microprofile instead of smallrye-rest-client -->
+        <!-- Wildfly 32 is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- observability implementations -->
-        <io.micrometer.version>1.12.0</io.micrometer.version>
+        <io.micrometer.version>1.12.4</io.micrometer.version>
         <io.opentelemetry.version>1.29.0</io.opentelemetry.version>
         <io.opentelemetry.instrumentation.version>1.29.0</io.opentelemetry.instrumentation.version>
 
-        <!-- Artifact versions provided by Wildfly 31.x.x.Final -->
-        <!-- (see wildfly-31.x.x.Final/modules/system/layers/base and Wildfly BOM) -->
-        <resteasy.version>6.2.7.Final</resteasy.version>
+        <!-- Artifact versions provided by Wildfly 32.x.x.Final -->
+        <!-- (see wildfly-32.x.x.Final/modules/system/layers/base and Wildfly BOM) -->
+        <resteasy.version>6.2.9.Final</resteasy.version>
         <apache.httpclient.version>4.5.14</apache.httpclient.version>
         <!-- note that wildfly provides jakarta.json* in the path modules/system/layers/base/javax/json/* -->
         <jakarta.json.version>2.1.3</jakarta.json.version>
         <jakarta.json.bind.version>3.0.0</jakarta.json.bind.version>
-        <parsson.version>1.1.5</parsson.version>
+        <parsson.version>1.1.6</parsson.version>
         <yasson.version>3.0.1</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.15.3</jackson-2-version>
-        <jackson-bom.version>2.15.3</jackson-bom.version>
+        <jackson-2-version>2.15.4</jackson-2-version>
+        <jackson-bom.version>2.15.4</jackson-bom.version>
 
         <!-- note that infinispan-directory-provider uses an older version -->
-        <infinispan.version>14.0.24.Final</infinispan.version>
+        <infinispan.version>14.0.28.Final</infinispan.version>
         <hibernate.version>6.4.4.Final</hibernate.version>
 
-        <!-- Wildfly 31.x.x.Final uses Hibernate Validator 8.0.xx.Final -->
+        <!-- Wildfly 32.x.x.Final uses Hibernate Validator 8.0.xx.Final -->
         <jakarta.validation.version>3.0.2</jakarta.validation.version>
         <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
 
-        <!-- Wildfly 31.x.x.Final uses Weld 5.1.x (corresponding to CDI 4.0) -->
+        <!-- Wildfly 32.x.x.Final uses Weld 5.1.x (corresponding to CDI 4.0) -->
         <jakarta.inject.version>2.0.1</jakarta.inject.version>
         <!-- TODO use org.jboss.weld:weld-core-bom -->
         <weld.version>5.1.2.Final</weld.version>
 
         <!-- Logging API supported by Wildfly -->
-        <slf4j.version>2.0.11</slf4j.version>
+        <slf4j.version>2.0.12</slf4j.version>
 
         <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
@@ -220,14 +220,6 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-health</artifactId>
                     <version>${smallrye.health.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (smallrye-health -->
-                            <!-- has only smallrye-config 3.2.1, wildfly already 3.3.0) -->
-                            <groupId>io.smallrye.config</groupId>
-                            <artifactId>smallrye-config</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -243,14 +235,6 @@
                     <groupId>io.smallrye.opentelemetry</groupId>
                     <artifactId>smallrye-opentelemetry-api</artifactId>
                     <version>${smallrye.opentelemetry.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (smallrye-opentelemetry-api -->
-                            <!-- has already opentelemetry-api:1.20.1, wildfly only 1.20.0) -->
-                            <groupId>io.opentelemetry</groupId>
-                            <artifactId>opentelemetry-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.reactive</groupId>
@@ -261,14 +245,6 @@
                     <groupId>io.smallrye.reactive</groupId>
                     <artifactId>smallrye-reactive-messaging-kafka-api</artifactId>
                     <version>${smallrye.reactive-messaging.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (smallrye-reactive-messaging -->
-                            <!-- has already opentelemetry-api:1.22.0, wildfly only 1.20.0) -->
-                            <groupId>io.opentelemetry</groupId>
-                            <artifactId>opentelemetry-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.reactive</groupId>
@@ -276,10 +252,16 @@
                     <version>${smallrye.reactive-messaging.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (smallrye-reactive-messaging-api -->
-                            <!-- has already opentelemetry-api:1.22.0, wildfly only 1.20.0) -->
-                            <groupId>io.opentelemetry</groupId>
-                            <artifactId>opentelemetry-api</artifactId>
+                            <!-- avoid Dependency convergence error (smallrye-reactive-messaging-provider -->
+                            <!-- has already smallrye-mutiny-vertx-core:3.8.0, wildfly only 3.6.0) -->
+                            <groupId>io.smallrye.reactive</groupId>
+                            <artifactId>smallrye-mutiny-vertx-core</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (smallrye-reactive-messaging-provider -->
+                            <!-- has already vertx-core:4.5.2, wildfly only 4.4.5) -->
+                            <groupId>io.vertx</groupId>
+                            <artifactId>vertx-core</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -292,13 +274,6 @@
                     <groupId>io.smallrye.reactive</groupId>
                     <artifactId>smallrye-mutiny-vertx-core</artifactId>
                     <version>${smallrye.mutiny.vertx.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- different mutiny-vertx dependencies use different vertx versions... -->
-                            <groupId>io.vertx</groupId>
-                            <artifactId>vertx-core</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.micrometer</groupId>
@@ -426,22 +401,4 @@
             </dependencies>
         </profile>
     </profiles>
-
-    <repositories>
-        <repository>
-            <!-- this is needed for many "x-jbossorg-n" versions of jakarta.* artifacts -->
-            <id>jboss-releases</id>
-            <name>JBoss Releases Repository</name>
-            <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
 </project>
