--- a/wildfly-34/pom.xml
+++ b/wildfly-34/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>wildfly-29</artifactId>
+    <artifactId>wildfly-34</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -16,13 +16,13 @@
         <!-- latest EE10 spec -->
         <jakarta.jakartaee-api.version>10.0.0</jakarta.jakartaee-api.version>
 
-        <!-- latest Wildfly 29 dependencies -->
+        <!-- latest Wildfly 34 dependencies -->
         <!-- see https://github.com/wildfly/boms/releases -->
-        <wildfly.bom.version>29.0.1.Final</wildfly.bom.version>
+        <wildfly.bom.version>34.0.0.Final</wildfly.bom.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
-        <jakarta.activation.version>2.1.2</jakarta.activation.version>
-        <jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
+        <jakarta.activation.version>2.1.3</jakarta.activation.version>
+        <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
         <jakarta.xml.soap-api.version>3.0.0</jakarta.xml.soap-api.version>
         <jakarta.xml.ws-api.version>4.0.0</jakarta.xml.ws-api.version>
         <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
@@ -34,65 +34,65 @@
         <version.org.jboss.spec.jakarta.el>4.0.1.Final</version.org.jboss.spec.jakarta.el>
         <jakarta.el.version>5.0.0-M1</jakarta.el.version>
 
-        <!-- MicroProfile Standard Versions provided by Wildfly 29 -->
-        <!-- see also https://mvnrepository.com/artifact/org.wildfly.bom/wildfly-microprofile/29.x.x.Final -->
-        <mp.config.version>3.0.2</mp.config.version>
+        <!-- MicroProfile Standard Versions provided by Wildfly 34 -->
+        <!-- see also https://mvnrepository.com/artifact/org.wildfly.bom/wildfly-microprofile/34.x.x.Final -->
+        <mp.config.version>3.1</mp.config.version>
         <mp.fault-tolerance.version>4.0.2</mp.fault-tolerance.version>
-        <mp.health.version>4.0</mp.health.version>
+        <mp.health.version>4.0.1</mp.health.version>
         <mp.jwt.version>2.1</mp.jwt.version>
         <mp.lra.version>2.0</mp.lra.version>
-        <mp.openapi.version>3.1</mp.openapi.version>
+        <mp.openapi.version>3.1.2</mp.openapi.version>
         <!-- mp.reactive-messaging classes included in smallrye.reactive-messaging, no dependency on upstream API -->
         <!-- but it is defined anyway in the wildfly-microprofile BOM -->
-        <mp.reactive-messaging.version>3.0</mp.reactive-messaging.version>
-        <mp.reactive-streams-operators.version>3.0</mp.reactive-streams-operators.version>
-        <mp.rest-client.version>3.0</mp.rest-client.version>
-        <smallrye.common.version>2.1.0</smallrye.common.version>
-        <smallrye.config.version>3.3.0</smallrye.config.version>
-        <smallrye.fault-tolerance.version>6.2.4</smallrye.fault-tolerance.version>
-        <smallrye.health.version>4.0.2</smallrye.health.version>
-        <smallrye.jwt.version>4.2.0</smallrye.jwt.version>
-        <smallrye.openapi.version>3.4.0</smallrye.openapi.version>
-        <smallrye.opentelemetry.version>2.3.2</smallrye.opentelemetry.version>
+        <mp.reactive-messaging.version>3.0.1</mp.reactive-messaging.version>
+        <mp.reactive-streams-operators.version>3.0.1</mp.reactive-streams-operators.version>
+        <mp.rest-client.version>3.0.1</mp.rest-client.version>
+        <smallrye.common.version>2.5.0</smallrye.common.version>
+        <smallrye.config.version>3.9.1</smallrye.config.version>
+        <smallrye.fault-tolerance.version>6.4.1</smallrye.fault-tolerance.version>
+        <smallrye.health.version>4.0.4</smallrye.health.version>
+        <smallrye.jwt.version>4.3.1</smallrye.jwt.version>
+        <smallrye.openapi.version>3.10.0</smallrye.openapi.version>
+        <smallrye.opentelemetry.version>2.6.0</smallrye.opentelemetry.version>
         <smallrye.reactive-converter-api.version>2.6.0</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>4.8.0</smallrye.reactive-messaging.version>
-        <smallrye.mutiny.reactive-streams-operators.version>2.1.0</smallrye.mutiny.reactive-streams-operators.version>
-        <smallrye.mutiny.vertx.version>3.3.0</smallrye.mutiny.vertx.version>
-        <!-- Wildfly 29 is using resteasy-client-microprofile instead of smallrye-rest-client -->
+        <smallrye.reactive-messaging.version>4.24.0</smallrye.reactive-messaging.version>
+        <smallrye.mutiny.reactive-streams-operators.version>2.6.2</smallrye.mutiny.reactive-streams-operators.version>
+        <smallrye.mutiny.vertx.version>3.13.2</smallrye.mutiny.vertx.version>
+        <!-- Wildfly 34 is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- observability implementations -->
-        <io.micrometer.version>1.9.3</io.micrometer.version>
-        <io.opentelemetry.version>1.20.0</io.opentelemetry.version>
+        <io.micrometer.version>1.12.4</io.micrometer.version>
+        <io.opentelemetry.version>1.29.0</io.opentelemetry.version>
 
-        <!-- Artifact versions provided by Wildfly 29.x.x.Final -->
-        <!-- (see wildfly-29.x.x.Final/modules/system/layers/base and Wildfly BOM) -->
-        <resteasy.version>6.2.5.Final</resteasy.version>
+        <!-- Artifact versions provided by Wildfly 34.x.x.Final -->
+        <!-- (see wildfly-34.x.x.Final/modules/system/layers/base and Wildfly BOM) -->
+        <resteasy.version>6.2.10.Final</resteasy.version>
         <apache.httpclient.version>4.5.14</apache.httpclient.version>
         <!-- note that wildfly provides jakarta.json* in the path modules/system/layers/base/javax/json/* -->
-        <jakarta.json.version>2.1.2</jakarta.json.version>
-        <jakarta.json.bind.version>3.0.0</jakarta.json.bind.version>
-        <parsson.version>1.1.3</parsson.version>
-        <yasson.version>3.0.1</yasson.version>
+        <jakarta.json.version>2.1.3</jakarta.json.version>
+        <jakarta.json.bind.version>3.0.1</jakarta.json.bind.version>
+        <parsson.version>1.1.7</parsson.version>
+        <yasson.version>3.0.4</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.14.2</jackson-2-version>
-        <jackson-bom.version>2.14.2</jackson-bom.version>
+        <jackson-2-version>2.17.0</jackson-2-version>
+        <jackson-bom.version>2.17.0</jackson-bom.version>
 
         <!-- note that infinispan-directory-provider uses an older version -->
-        <infinispan.version>14.0.12.Final</infinispan.version>
-        <hibernate.version>6.2.6.Final</hibernate.version>
+        <infinispan.version>14.0.32.Final</infinispan.version>
+        <hibernate.version>6.6.1.Final</hibernate.version>
 
-        <!-- Wildfly 29.x.x.Final uses Hibernate Validator 8.0.xx.Final -->
+        <!-- Wildfly 34.x.x.Final uses Hibernate Validator 8.0.xx.Final -->
         <jakarta.validation.version>3.0.2</jakarta.validation.version>
-        <hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
+        <hibernate.validator.version>8.0.1.Final</hibernate.validator.version>
 
-        <!-- Wildfly 29.x.x.Final uses Weld 5.1.x (corresponding to CDI 4.0) -->
+        <!-- Wildfly 34.x.x.Final uses Weld 5.1.x (corresponding to CDI 4.0) -->
         <jakarta.inject.version>2.0.1</jakarta.inject.version>
         <!-- TODO use org.jboss.weld:weld-core-bom -->
-        <weld.version>5.1.1.Final</weld.version>
+        <weld.version>5.1.3.Final</weld.version>
 
         <!-- Logging API supported by Wildfly -->
-        <slf4j.version>2.0.7</slf4j.version>
+        <slf4j.version>2.0.16</slf4j.version>
 
         <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
@@ -118,7 +118,7 @@
             </dependency>
             <dependency>
                 <groupId>org.wildfly.bom</groupId>
-                <artifactId>wildfly-microprofile</artifactId>
+                <artifactId>wildfly-expansion</artifactId>
                 <version>${wildfly.bom.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
@@ -219,14 +219,6 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-health</artifactId>
                     <version>${smallrye.health.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (smallrye-health -->
-                            <!-- has only smallrye-config 3.2.1, wildfly already 3.3.0) -->
-                            <groupId>io.smallrye.config</groupId>
-                            <artifactId>smallrye-config</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -242,14 +234,6 @@
                     <groupId>io.smallrye.opentelemetry</groupId>
                     <artifactId>smallrye-opentelemetry-api</artifactId>
                     <version>${smallrye.opentelemetry.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (smallrye-opentelemetry-api -->
-                            <!-- has already opentelemetry-api:1.20.1, wildfly only 1.20.0) -->
-                            <groupId>io.opentelemetry</groupId>
-                            <artifactId>opentelemetry-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.reactive</groupId>
@@ -260,14 +244,6 @@
                     <groupId>io.smallrye.reactive</groupId>
                     <artifactId>smallrye-reactive-messaging-kafka-api</artifactId>
                     <version>${smallrye.reactive-messaging.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- avoid Dependency convergence error (smallrye-reactive-messaging -->
-                            <!-- has already opentelemetry-api:1.22.0, wildfly only 1.20.0) -->
-                            <groupId>io.opentelemetry</groupId>
-                            <artifactId>opentelemetry-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye.reactive</groupId>
@@ -275,10 +251,16 @@
                     <version>${smallrye.reactive-messaging.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (smallrye-reactive-messaging-api -->
-                            <!-- has already opentelemetry-api:1.22.0, wildfly only 1.20.0) -->
-                            <groupId>io.opentelemetry</groupId>
-                            <artifactId>opentelemetry-api</artifactId>
+                            <!-- avoid Dependency convergence error (smallrye-reactive-messaging-provider -->
+                            <!-- has already smallrye-mutiny-vertx-core:3.8.0, wildfly only 3.6.0) -->
+                            <groupId>io.smallrye.reactive</groupId>
+                            <artifactId>smallrye-mutiny-vertx-core</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (smallrye-reactive-messaging-provider -->
+                            <!-- has already vertx-core:4.5.2, wildfly only 4.4.5) -->
+                            <groupId>io.vertx</groupId>
+                            <artifactId>vertx-core</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -291,13 +273,6 @@
                     <groupId>io.smallrye.reactive</groupId>
                     <artifactId>smallrye-mutiny-vertx-core</artifactId>
                     <version>${smallrye.mutiny.vertx.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- different mutiny-vertx dependencies use different vertx versions... -->
-                            <groupId>io.vertx</groupId>
-                            <artifactId>vertx-core</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.micrometer</groupId>
@@ -425,22 +400,4 @@
             </dependencies>
         </profile>
     </profiles>
-
-    <repositories>
-        <repository>
-            <!-- this is needed for many "x-jbossorg-n" versions of jakarta.* artifacts -->
-            <id>jboss-releases</id>
-            <name>JBoss Releases Repository</name>
-            <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
 </project>
